// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export tests default renderer 1`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(Paper)>
      <WithStyles(List)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Button)
              id="export-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            </WithStyles(Button)>
            <WithStyles(Menu)
              anchorEl={null}
              id="export-menu"
              onClose={[Function]}
              open={false}
            >
              <WithStyles(MenuItem)
                onClick={[Function]}
              >
                Cboard
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                onClick={[Function]}
              >
                OpenBoard
              </WithStyles(MenuItem)>
            </WithStyles(Menu)>
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
      </WithStyles(List)>
    </WithStyles(Paper)>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Export tests menu behavior 1`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(Paper)>
      <WithStyles(List)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Button)
              id="export-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            </WithStyles(Button)>
            <WithStyles(Menu)
              anchorEl={null}
              id="export-menu"
              onClose={[Function]}
              open={false}
            >
              <WithStyles(MenuItem)
                onClick={[Function]}
              >
                Cboard
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                onClick={[Function]}
              >
                OpenBoard
              </WithStyles(MenuItem)>
            </WithStyles(Menu)>
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
      </WithStyles(List)>
    </WithStyles(Paper)>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Export tests menu behavior 2`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(Paper)>
      <WithStyles(List)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Button)
              id="export-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            </WithStyles(Button)>
            <WithStyles(Menu)
              anchorEl="someElement"
              id="export-menu"
              onClose={[Function]}
              open={true}
            >
              <WithStyles(MenuItem)
                onClick={[Function]}
              >
                Cboard
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                onClick={[Function]}
              >
                OpenBoard
              </WithStyles(MenuItem)>
            </WithStyles(Menu)>
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
      </WithStyles(List)>
    </WithStyles(Paper)>
  </WithStyles(FullScreenDialog)>
</div>
`;
